--- a/src/__typography.html
+++ b/src/__typography.html
@@ -340,191 +340,41 @@
 
 						<div class="layout-flood">
 							<!--form style-->
-							<form action="#" method="get">
-								<div class="input-wrap">
-									<div class="label-holder">
-										<label for="expl-label-01">Пример текстового поля с плейсхолдером: <span class="form-mark">*</span></label>
-									</div>
-									<div class="input-holder">
-										<input type="text" placeholder="Текстовое поле" id="expl-label-01" />
-										<span class="error-note">Поле обязательное для заполнения</span>
-									</div>
-								</div>
-								<div class="input-wrap">
-									<div class="label-holder">
-										<label for="expl-label-02">Пример невалидного текстового поля: <span class="form-mark">*</span></label>
-									</div>
-									<div class="input-holder error">
-										<input class="error" type="text" placeholder="Невалидное поле" id="expl-label-02" />
-										<span class="error-note">Поле обязательное для заполнения</span>
-									</div>
-								</div>
-								<div class="form-row">
-									<div class="input-wrap">
-										<div class="label-holder">
-											<label for="expl-label-03">Текстовое поле первое: <span class="form-mark">*</span></label>
-										</div>
-										<div class="input-holder">
-											<input type="text" placeholder="Текстовое поле первое" id="expl-label-03" />
-										</div>
-									</div>
-									<div class="input-wrap">
-										<div class="label-holder">
-											<label for="expl-label-04">Текстовое поле второе: <span class="form-mark">*</span></label>
-										</div>
-										<div class="input-holder">
-											<input type="text" placeholder="Текстовое поле второе" id="expl-label-04" />
-										</div>
-									</div>
-								</div>
-								<div class="form-row">
-									<div class="input-wrap">
-										<div class="label-holder">
-											<label for="expl-label-05">Текстовое поле третье: <span class="form-mark">*</span></label>
-										</div>
-										<div class="input-holder">
-											<input type="text" placeholder="Текстовое поле третье" id="expl-label-05" />
-										</div>
-									</div>
-									<div class="input-wrap">
-										<div class="label-holder">
-											<label for="expl-label-06">Пример селекта: <span class="form-mark">*</span></label>
-										</div>
-										<div class="select">
-											<select name="filter-type" id="expl-label-06">
-												<option value="1">Размер</option>
-												<option value="2">Вес</option>
-												<option value="3">Цвет</option>
-												<option value="4">Позицию (расположение)</option>
-												<option value="5">Опшин очень-очень-очень-очень длинный</option>
-												<option value="6">Контраст</option>
-												<option value="7">Сочетание</option>
-												<option value="8">Расстояние</option>
-											</select>
-										</div>
-									</div>
-								</div>
-								<div class="input-wrap">
-									<div class="label-holder">
-										<label for="expl-label-07">Сообщение:</label>
-									</div>
-									<div class="input-holder">
-										<textarea placeholder="Сообщение" id="expl-label-07"></textarea>
-									</div>
-								</div>
-								<div class="form-row">
-									<div class="input-wrap">
-										<h3>
-											<span class="mark">Checkbox outside label</span>
-										</h3>
-										<ul class="checkbox-list reset-list">
-											<li>
-												<input type="checkbox" name="checkbox-normal" id="checkbox-normal" />
-												<label for="checkbox-normal"><span>Normal</span></label>
-											</li>
-											<li>
-												<input type="checkbox" name="checkbox-checked" id="checkbox-checked" checked />
-												<label for="checkbox-checked"><span>Checked</span></label>
-											</li>
-											<li>
-												<input type="checkbox" name="checkbox-disabled" id="checkbox-disabled" disabled />
-												<label for="checkbox-disabled"><span>Disabled</span></label>
-											</li>
-											<li>
-												<input type="checkbox" name="checkbox-checked-disabled" id="checkbox-checked-disabled" checked disabled />
-												<label for="checkbox-checked-disabled"><span>Checked & Disabled</span></label>
-											</li>
-										</ul>
 
-										<h3>
-											<span class="mark">Checkbox inside label</span>
-										</h3>
-										<ul class="checkbox-list reset-list">
-											<li>
-												<label class="check-label">
-													<input type="checkbox" name="checkbox-normal" />
-													<span><i></i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
-												</label>
-											</li>
-											<li>
-												<label class="check-label">
-													<input type="checkbox" name="checkbox-checked" checked />
-													<span><i></i>Checked</span>
-												</label>
-											</li>
-											<li>
-												<label class="check-label">
-													<input type="checkbox" name="checkbox-disabled" disabled />
-													<span><i></i>Disabled</span>
-												</label>
-											</li>
-											<li>
-												<label class="check-label">
-													<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
-													<span><i></i>Checked & Disabled</span>
-												</label>
-											</li>
-										</ul>
-									</div>
-									<div class="input-wrap">
-										<h3>
-											<span class="mark">Radiobutton outside label</span>
-										</h3>
-										<ul class="radio-list reset-list">
-											<li>
-												<input type="radio" name="testRadioOutside" id="radio-male" checked />
-												<label for="radio-male"><span>Male</span></label>
-											</li>
-											<li>
-												<input type="radio" name="testRadioOutside" id="radio-female" />
-												<label for="radio-female"><span>Female</span></label>
-											</li>
-											<li>
-												<input type="radio" name="radio-disabled" id="radio-disabled" disabled />
-												<label for="radio-disabled"><span>Disabled</span></label>
-											</li>
-											<li>
-												<input type="radio" name="radio-checked-disabled" id="radio-checked-disabled" checked disabled />
-												<label for="radio-checked-disabled"><span>Checked & Disabled</span></label>
-											</li>
-										</ul>
-
-										<h3>
-											<span class="mark">Radiobutton inside label</span>
-										</h3>
-										<ul class="radio-list reset-list">
-											<li>
-												<label class="radio-label">
-													<input type="radio" name="testRadioInside" />
-													<span><i></i>Male</span>
-												</label>
-											</li>
-											<li>
-												<label class="radio-label">
-													<input type="radio" name="testRadioInside" checked />
-													<span><i></i>Female</span>
-												</label>
-											</li>
-											<li>
-												<label class="radio-label">
-													<input type="radio" name="radio-disabled" disabled />
-													<span><i></i>Disabled</span>
-												</label>
-											</li>
-											<li>
-												<label class="radio-label">
-													<input type="radio" name="radio-checked-disabled" checked disabled />
-													<span><i></i>Checked & Disabled</span>
-												</label>
-											</li>
-										</ul>
-									</div>
-								</div>
-							</form>
 							<!--form style end-->
 						</div>
 
-						@@include('_forms_user-form.tpl')
+						<!--form style-->
+						<div class="layout-flood">
+							<h3>
+								<i class="hash-anchor" id="hashFormElementExample">&nbsp;</i>
+								<span class="mark"><a href="#hashFormElementExample">Элементы форм</a></span>
+							</h3>
+						</div>
+						@@include('_forms_form-default.tpl')
+						<!--form style end-->
+
+						<!--checkbox and radio-->
+						<div class="layout-flood">
+							<h3>
+								<i class="hash-anchor" id="hashFormCheckboxExample">&nbsp;</i>
+								<span class="mark"><a href="#hashFormCheckboxExample">Примеры чекбоксов и переключателей</a></span>
+							</h3>
+						</div>
+						@@include('_forms_checkbox-and-radio.tpl')
+						<!--checkbox and radio end-->
+
+						<!--user form-->
+						<div class="layout-flood">
+							<h3>
+								<i class="hash-anchor" id="hashUserFormExample">&nbsp;</i>
+								<span class="mark"><a href="#hashUserFormExample">Блок с полями формы</a></span>
+							</h3>
+						</div>
+						@@include('_forms_user-form.tpl', {
+							"title": "Заголовок формы"
+						})
+						<!--user form end-->
 
 						<div class="layout-flood">
 							<h3><span class="mark">Контент в несколько колонок</span></h3>
@@ -593,6 +443,31 @@
 							<h3><span class="mark">Список элементов с изображением и описанием</span></h3>
 							@@include("_tpl_feature-list.tpl")
 						</div>
+
+						<script>
+							'use strict';
+
+							var nav = document.createElement('ul');
+							nav.className = "navigationByTypographyElements";
+							document.body.appendChild(nav);
+
+							var numberSpan = document.querySelector('.hash-anchor');
+
+							for(var i = 0; i < document.querySelectorAll('.hash-anchor').length; i++){
+								var elem = document.querySelectorAll('.hash-anchor');
+								var elemId = elem.id;
+								console.log("elemId: ", elemId);
+//								console.log("elem: ", elem[i].closest('h3').lastChild.previousSibling.textContent.trim());
+
+								var a = document.createElement('a');
+								a.setAttribute('href', '#');
+								var li = document.createElement('li');
+//								div.className = "alert alert-success";
+								a.innerHTML = elem[i].closest('h3').lastChild.previousSibling.textContent.trim();
+								li.appendChild(a);
+								nav.appendChild(li);
+							}
+						</script>
 					</div>
 				</div>
 				<!--CONTENT end-->
