--- a/src/test-mixins.html
+++ b/src/test-mixins.html
@@ -238,35 +238,12 @@
 								</section>
 								<section class="section">
 									<div class="section__title">
-										<h3>vertical-align()</h3>
-									</div>
-									<div class="section__holder">
-										<div class="section__box">
-											<div class="section__subtitle">
-												<h4>vertical-align($pseudo: after, $align: bottom)</h4>
-											</div>
-											<div class="mx-element mx-vertical-align">
-												<div class="mx-inner mx-vertical-align__inner"></div>
-											</div>
-										</div>
-										<div class="section__box">
-											<div class="section__subtitle">
-												<h4>vertical-align()</h4>
-											</div>
-											<div class="mx-element mx-vertical-align mx--default">
-												<div class="mx-inner mx-vertical-align__inner"></div>
-											</div>
-										</div>
-									</div>
-								</section>
-								<section class="section">
-									<div class="section__title">
 										<h3>centering()</h3>
 									</div>
 									<div class="section__holder">
 										<div class="section__box">
 											<div class="section__subtitle">
-												<h4>centering($width: 200px, $height: 50px, $transform: false)</h4>
+												<h4>+centering-margin($width, $height)</h4>
 											</div>
 											<div class="mx-element mx-centering">
 												<div class="mx-inner mx-centering__inner"></div>
@@ -274,7 +251,7 @@
 										</div>
 										<div class="section__box">
 											<div class="section__subtitle">
-												<h4>centering()</h4>
+												<h4>+centering-transform()</h4>
 											</div>
 											<div class="mx-element mx-centering mx--default">
 												<div class="mx-inner mx-centering__inner"></div>
