--- a/src/__test-mixins.html
+++ b/src/__test-mixins.html
@@ -156,6 +156,54 @@
 									</div>
 								</div>
 							</section>
+							<section class="section">
+								<div class="section__title"><h3>height-text()</h3></div>
+								<div class="section__holder">
+									<div class="section__box">
+										<div class="mx-element mx-height-text">
+											<div class="mx-subtitle">
+												<div><b>+font(1em, 1.5)</b></div>
+												<div><b>+height-text(4, 1em, 1.5)</b></div>
+											</div>
+											<div class="mx-inner mx-height-text__inner">
+												Не отделяйте отступом первый абзац от заголовка. Если вы отбиваете абзацы пустой строкой, не используйте абзацные отступы. Это избыточно и безвкусно. С другой стороны, текст вообще без отступов и отбивок будет сложнее восприниматься. В общем, выберите один из способов: или красную строку, или отбивку — и используйте его на протяжении всего текста. Гарнитура — шрифт или несколько шрифтов, имеющих стилистическое единство начертания. Состоит из набора знаков (обычно — цифры, буквы, знаки пунктуации, спецсимволы, но может состоять так же исключительно из неалфавитных знаков). Например, гарнитура «Times New Roman» состоит из обычного, курсивного, полужирного и множества других шрифтов этого семейства.
+											</div>
+
+											<div class="mx-subtitle">
+												<div><b>+font(1em, 1.5)</b></div>
+												<div><b>+height-text(4, 1em, 1.5)</b></div>
+											</div>
+											<div class="mx-inner mx-height-text__inner">
+												Не отделяйте отступом первый абзац от заголовка. Если вы отбиваете абзацы пустой строкой, не используйте абзацные отступы.
+											</div>
+										</div>
+									</div>
+								</div>
+							</section>
+							<section class="section">
+								<div class="section__title"><h3>max-height-text()</h3></div>
+								<div class="section__holder">
+									<div class="section__box">
+										<div class="mx-element mx-height-text">
+											<div class="mx-subtitle">
+												<div><b>+font(1em, 1.5)</b></div>
+												<div><b>+max-height-text(4, 1em, 1.5)</b></div>
+											</div>
+											<div class="mx-inner mx-max-height-text__inner">
+												Не отделяйте отступом первый абзац от заголовка. Если вы отбиваете абзацы пустой строкой, не используйте абзацные отступы. Это избыточно и безвкусно. С другой стороны, текст вообще без отступов и отбивок будет сложнее восприниматься. В общем, выберите один из способов: или красную строку, или отбивку — и используйте его на протяжении всего текста. Гарнитура — шрифт или несколько шрифтов, имеющих стилистическое единство начертания. Состоит из набора знаков (обычно — цифры, буквы, знаки пунктуации, спецсимволы, но может состоять так же исключительно из неалфавитных знаков). Например, гарнитура «Times New Roman» состоит из обычного, курсивного, полужирного и множества других шрифтов этого семейства.
+											</div>
+
+											<div class="mx-subtitle">
+												<div><b>+font(1em, 1.5)</b></div>
+												<div><b>+max-height-text(4, 1em, 1.5)</b></div>
+											</div>
+											<div class="mx-inner mx-max-height-text__inner">
+												Не отделяйте отступом первый абзац от заголовка. Если вы отбиваете абзацы пустой строкой, не используйте абзацные отступы.
+											</div>
+										</div>
+									</div>
+								</div>
+							</section>
 						</div>
 					</div>
 				</div>
