--- a/src/__typography.html
+++ b/src/__typography.html
@@ -60,7 +60,9 @@
 								Если у вас недостаточно опыта и знаний, даже не пытайтесь использовать необычные, затейливые шрифты. Будьте проще
 								<span class="mark">(h3)</span>
 							</h3>
-							<p>Одним из наиболее важных методов для эффективной передачи содержания является использование типографской иерархии. Она представляет собой систему организации данных, которая устанавливает порядок их важности, что позволяет пользователю найти то, что ему нужно.</p>
+							<p>Одним из наиболее важных методов для эффективной передачи содержания является использование типографской иерархии.</p>
+							<p>Она представляет собой систему организации данных, которая устанавливает порядок их важности, что позволяет пользователю найти то, что ему нужно.</p>
+							<p>В рекомендациях по сочетанию шрифтов преобладает негласное правило — для заголовков выбирается шрифт без засечек, а основной текст формируется шрифтом с засечками. Однако такой подход не настолько популярен, как может показаться.</p>
 							<!--h4-->
 							<h4>
 								Забудьте о Comic Sans Представьте, что вы его вообще никогда не видели
