--- a/src/__typography.html
+++ b/src/__typography.html
@@ -366,9 +366,7 @@
 						</div>
 						<!--style default button end-->
 
-						<div class="layout-text">
-							<p>У всех шрифтов есть хотя бы одна сладкая точка; комбинация размеров, при котором шрифт лучше всего показывает себя на экране, точка, в которой анти-сглаживание, встроенное в браузеры, искажает дизайн шрифта как можно меньше.</p>
-						</div>
+						<div class="user-spacer">&nbsp;</div>
 
 						<!--form style-->
 						<div class="layout-text">
@@ -379,6 +377,21 @@
 						@@include('_forms_form-default.tpl')
 						<!--form style end-->
 
+						<div class="user-spacer">&nbsp;</div>
+
+						<!--selects-->
+						<div class="layout-text">
+							<h3>
+								<a href="#hashFormsSelect" id="hashFormsSelect" class="hashAnchor"><span class="mark">Селекты</span></a>
+							</h3>
+						</div>
+						<div class="layout-text">
+							@@include('_forms_form-selects.tpl')
+						</div>
+						<!--selects end-->
+
+						<div class="user-spacer">&nbsp;</div>
+
 						<!--checkbox and radio-->
 						<div class="layout-text">
 							<h3>
@@ -387,6 +400,8 @@
 						</div>
 						@@include('_forms_checkbox-and-radio.tpl')
 						<!--checkbox and radio end-->
+
+						<div class="user-spacer">&nbsp;</div>
 
 						<!--user form-->
 						<div class="layout-text">
@@ -398,6 +413,8 @@
 							"title": "Заголовок формы"
 						})
 						<!--user form end-->
+
+						<div class="user-spacer">&nbsp;</div>
 
 						<!--columnize-->
 						<div class="layout-text">
