--- a/src/typography.html
+++ b/src/typography.html
@@ -229,8 +229,9 @@
 									Если у вас недостаточно опыта и знаний, даже не пытайтесь использовать необычные, затейливые шрифты. Будьте проще
 									<span class="mark">(h3)</span>
 								</h3>
-								<p>Одним из наиболее важных методов для эффективной передачи содержания является использование типографской иерархии. Она представляет собой систему организации данных, которая устанавливает порядок их важности, что позволяет пользователю найти то,
-									что ему нужно.</p>
+								<p>Одним из наиболее важных методов для эффективной передачи содержания является использование типографской иерархии.</p>
+								<p>Она представляет собой систему организации данных, которая устанавливает порядок их важности, что позволяет пользователю найти то, что ему нужно.</p>
+								<p>В рекомендациях по сочетанию шрифтов преобладает негласное правило — для заголовков выбирается шрифт без засечек, а основной текст формируется шрифтом с засечками. Однако такой подход не настолько популярен, как может показаться.</p>
 								<!--h4-->
 								<h4>
 									Забудьте о Comic Sans Представьте, что вы его вообще никогда не видели
@@ -589,9 +590,7 @@
 								</div>
 							</div>
 							<!--style default button end-->
-							<div class="layout-text">
-								<p>У всех шрифтов есть хотя бы одна сладкая точка; комбинация размеров, при котором шрифт лучше всего показывает себя на экране, точка, в которой анти-сглаживание, встроенное в браузеры, искажает дизайн шрифта как можно меньше.</p>
-							</div>
+							<div class="user-spacer">&nbsp;</div>
 							<!--form style-->
 							<div class="layout-text">
 								<h3>
@@ -599,154 +598,180 @@
 								</h3>
 							</div>
 							<form action="#" method="get">
-								<div class="layout-flood">
-									<div class="input-wrap">
+								<div class="input-wrap field-effects-js">
+									<div class="label-holder">
+										<label for="expl-label-01">Пример текстового поля с плейсхолдером: <span class="form-mark">*</span></label>
+									</div>
+									<div class="input-holder">
+										<input type="text" placeholder="Текстовое поле" id="expl-label-01" />
+										<span class="error-note">Поле обязательное для заполнения</span>
+										<span class="confirm-note">&nbsp;</span>
+									</div>
+								</div>
+								<div class="input-wrap field-effects-js">
+									<div class="label-holder">
+										<label for="expl-label-02">Пример невалидного текстового поля: <span class="form-mark">*</span></label>
+									</div>
+									<div class="input-holder error">
+										<input class="error" type="text" placeholder="Невалидное поле" id="expl-label-02" />
+										<span class="error-note">Поле обязательное для заполнения</span>
+										<span class="confirm-note">&nbsp;</span>
+									</div>
+								</div>
+								<div class="form-row">
+									<div class="input-wrap field-effects-js">
 										<div class="label-holder">
-											<label for="expl-label-01">Пример текстового поля с плейсхолдером: <span class="form-mark">*</span></label>
+											<label for="expl-label-03">Текстовое поле первое: <span class="form-mark">*</span></label>
 										</div>
 										<div class="input-holder">
-											<input type="text" placeholder="Текстовое поле" id="expl-label-01" />
+											<input type="text" placeholder="Текстовое поле первое" id="expl-label-03" />
 											<span class="error-note">Поле обязательное для заполнения</span>
+											<span class="confirm-note">&nbsp;</span>
 										</div>
 									</div>
-									<div class="input-wrap">
+									<div class="input-wrap field-effects-js">
 										<div class="label-holder">
-											<label for="expl-label-02">Пример невалидного текстового поля: <span class="form-mark">*</span></label>
+											<label for="expl-label-04">Текстовое поле второе: <span class="form-mark">*</span></label>
 										</div>
 										<div class="input-holder error">
-											<input class="error" type="text" placeholder="Невалидное поле" id="expl-label-02" />
+											<input class="error" type="text" placeholder="Текстовое поле второе" id="expl-label-04" />
 											<span class="error-note">Поле обязательное для заполнения</span>
+											<span class="confirm-note">&nbsp;</span>
 										</div>
 									</div>
-									<div class="form-row">
-										<div class="input-wrap">
-											<div class="label-holder">
-												<label for="expl-label-03">Текстовое поле первое: <span class="form-mark">*</span></label>
-											</div>
-											<div class="input-holder">
-												<input type="text" placeholder="Текстовое поле первое" id="expl-label-03" />
-											</div>
-										</div>
-										<div class="input-wrap">
-											<div class="label-holder">
-												<label for="expl-label-04">Текстовое поле второе: <span class="form-mark">*</span></label>
-											</div>
-											<div class="input-holder">
-												<input type="text" placeholder="Текстовое поле второе" id="expl-label-04" />
-											</div>
-										</div>
-									</div>
-									<div class="form-row">
-										<div class="input-wrap">
-											<div class="label-holder">
-												<label for="expl-label-05">Текстовое поле третье: <span class="form-mark">*</span></label>
-											</div>
-											<div class="input-holder">
-												<input type="text" placeholder="Текстовое поле третье" id="expl-label-05" />
-											</div>
-										</div>
-										<div class="input-wrap">
-											<div class="label-holder">
-												<label for="expl-label-06">Пример селекта: <span class="form-mark">*</span></label>
-											</div>
-											<div class="select">
-												<select class="cselect" name="filter-type" id="expl-label-06">
-						<option value="1">Размер</option>
-						<option value="2">Вес</option>
-						<option value="3">Цвет</option>
-						<option value="4">Позицию (расположение)</option>
-						<option value="5">Опшин очень-очень-очень-очень длинный</option>
-						<option value="6">Контраст</option>
-						<option value="7">Сочетание</option>
-						<option value="8">Расстояние</option>
-					</select>
-											</div>
-										</div>
-									</div>
-									<div class="input-wrap">
+								</div>
+								<div class="form-row">
+									<div class="input-wrap field-effects-js">
 										<div class="label-holder">
-											<label for="expl-label-07">Сообщение:</label>
+											<label for="expl-label-05">Текстовое поле третье: <span class="form-mark">*</span></label>
 										</div>
 										<div class="input-holder">
-											<textarea placeholder="Сообщение" id="expl-label-07"></textarea>
+											<input type="text" placeholder="Текстовое поле третье" id="expl-label-05" />
+											<span class="error-note">Поле обязательное для заполнения</span>
+											<span class="confirm-note">&nbsp;</span>
 										</div>
 									</div>
-									<div class="layout-text">
-										<h3>
-											<a href="#hashFormsSelect" id="hashFormsSelect" class="hashAnchor"><span class="mark">Селекты</span></a>
-										</h3>
+									<div class="input-wrap field-effects-js">
+										<div class="label-holder">
+											<label for="expl-label-06">Пример селекта: <span class="form-mark">*</span></label>
+										</div>
+										<div class="select error">
+											<select class="cselect error" name="filter-type" id="expl-label-06">
+					<option value="1">Размер</option>
+					<option value="2">Вес</option>
+					<option value="3">Цвет</option>
+					<option value="4">Позицию (расположение)</option>
+					<option value="5">Опшин очень-очень-очень-очень длинный</option>
+					<option value="6">Контраст</option>
+					<option value="7">Сочетание</option>
+					<option value="8">Расстояние</option>
+				</select>
+											<span class="error-note">Обязательное поле</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
 									</div>
-									<div class="input-wrap">
+								</div>
+								<div class="input-wrap field-effects-js">
+									<div class="label-holder">
+										<label for="expl-label-07">Сообщение:</label>
+									</div>
+									<div class="input-holder">
+										<textarea placeholder="Сообщение" id="expl-label-07"></textarea>
+										<span class="error-note">Поле обязательное для заполнения</span>
+										<span class="confirm-note">&nbsp;</span>
+									</div>
+								</div>
+							</form>
+							<!--form style end-->
+							<div class="user-spacer">&nbsp;</div>
+							<!--selects-->
+							<div class="layout-text">
+								<h3>
+									<a href="#hashFormsSelect" id="hashFormsSelect" class="hashAnchor"><span class="mark">Селекты</span></a>
+								</h3>
+							</div>
+							<div class="layout-text">
+								<form action="#" method="get">
+									<div class="input-wrap field-effects-js">
 										<div class="label-holder">
 											<label for="default-select-example">Некастомный селект:</label>
 										</div>
 										<div class="select">
 											<select id="default-select-example">
-					<option value="1">Размер</option>
-					<option value="2">Вес</option>
-					<option value="3">Цвет</option>
-					<option value="4">Позицию (расположение)</option>
-					<option value="5">Опшин очень-очень-очень-очень длинный</option>
-					<option value="6">Контраст</option>
-					<option value="7">Сочетание</option>
-					<option value="8">Расстояние</option>
-				</select>
+				<option value="1">Размер</option>
+				<option value="2">Вес</option>
+				<option value="3">Цвет</option>
+				<option value="4">Позицию (расположение)</option>
+				<option value="5">Опшин очень-очень-очень-очень длинный</option>
+				<option value="6">Контраст</option>
+				<option value="7">Сочетание</option>
+				<option value="8">Расстояние</option>
+			</select>
+											<span class="error-note">Обязательное поле</span>
+											<span class="confirm-note">&nbsp;</span>
 										</div>
 									</div>
-									<div class="input-wrap">
+									<div class="input-wrap field-effects-js">
 										<div class="label-holder">
 											<label for="custom-select-example">Кастомный селект:</label>
 										</div>
 										<div class="select">
 											<select class="cselect" id="custom-select-example">
-					<option value="1">Размер</option>
-					<option value="2">Вес</option>
-					<option value="3">Цвет</option>
-					<option value="4">Позицию (расположение)</option>
-					<option value="5">Опшин очень-очень-очень-очень длинный</option>
-					<option value="6">Контраст</option>
-					<option value="7">Сочетание</option>
-					<option value="8">Расстояние</option>
-				</select>
+				<option value="1">Размер</option>
+				<option value="2">Вес</option>
+				<option value="3">Цвет</option>
+				<option value="4">Позицию (расположение)</option>
+				<option value="5">Опшин очень-очень-очень-очень длинный</option>
+				<option value="6">Контраст</option>
+				<option value="7">Сочетание</option>
+				<option value="8">Расстояние</option>
+			</select>
+											<span class="error-note">Обязательное поле</span>
+											<span class="confirm-note">&nbsp;</span>
 										</div>
 									</div>
-									<div class="input-wrap">
+									<div class="input-wrap field-effects-js">
 										<div class="label-holder">
 											<label for="multiselect-example">Мультиселект:</label>
 										</div>
 										<div class="select">
 											<select class="cselect" id="multiselect-example" multiple>
-					<option value="1">Размер</option>
-					<option value="2">Вес</option>
-					<option value="3">Цвет</option>
-					<option value="4">Позицию (расположение)</option>
-					<option value="5">Опшин очень-очень-очень-очень длинный</option>
-					<option value="6">Контраст</option>
-					<option value="7">Сочетание</option>
-					<option value="8">Расстояние</option>
-				</select>
+				<option value="1">Размер</option>
+				<option value="2">Вес</option>
+				<option value="3">Цвет</option>
+				<option value="4">Позицию (расположение)</option>
+				<option value="5">Опшин очень-очень-очень-очень длинный</option>
+				<option value="6">Контраст</option>
+				<option value="7">Сочетание</option>
+				<option value="8">Расстояние</option>
+			</select>
+											<span class="error-note">Обязательное поле</span>
+											<span class="confirm-note">&nbsp;</span>
 										</div>
 									</div>
-									<div class="input-wrap">
+									<div class="input-wrap field-effects-js">
 										<div class="label-holder">
 											<label for="multiselect-with-placeholder-example">Мультиселект c пелейсхолдером:</label>
 										</div>
 										<div class="select">
 											<select class="cselect" id="multiselect-with-placeholder-example" multiple data-placeholder="Выберите несколько вариантов">
-					<option value="1">Размер</option>
-					<option value="2">Вес</option>
-					<option value="3">Цвет</option>
-					<option value="4">Позицию (расположение)</option>
-					<option value="5">Опшин очень-очень-очень-очень длинный</option>
-					<option value="6">Контраст</option>
-					<option value="7">Сочетание</option>
-					<option value="8">Расстояние</option>
-				</select>
+				<option value="1">Размер</option>
+				<option value="2">Вес</option>
+				<option value="3">Цвет</option>
+				<option value="4">Позицию (расположение)</option>
+				<option value="5">Опшин очень-очень-очень-очень длинный</option>
+				<option value="6">Контраст</option>
+				<option value="7">Сочетание</option>
+				<option value="8">Расстояние</option>
+			</select>
+											<span class="error-note">Обязательное поле</span>
+											<span class="confirm-note">&nbsp;</span>
 										</div>
 									</div>
-								</div>
-							</form>
-							<!--form style end-->
+								</form>
+							</div>
+							<!--selects end-->
+							<div class="user-spacer">&nbsp;</div>
 							<!--checkbox and radio-->
 							<div class="layout-text">
 								<h3>
@@ -864,6 +889,7 @@
 								</div>
 							</form>
 							<!--checkbox and radio end-->
+							<div class="user-spacer">&nbsp;</div>
 							<!--user form-->
 							<div class="layout-text">
 								<h3>
@@ -880,7 +906,8 @@
 											</div>
 											<div class="input-holder">
 												<input type="text" id="user-form-example__name-field">
-												<span class="error-note">Поле обязательно для заполнения</span>
+												<span class="error-note">Поле обязательное для заполнения</span>
+												<span class="confirm-note">&nbsp;</span>
 											</div>
 										</div>
 										<div class="input-wrap">
@@ -889,16 +916,18 @@
 											</div>
 											<div class="input-holder">
 												<input type="email" id="user-form-example__email-field">
-												<span class="error-note">Поле обязательно для заполнения</span>
+												<span class="error-note">Поле обязательное для заполнения</span>
+												<span class="confirm-note">&nbsp;</span>
 											</div>
 										</div>
-										<div class="input-wrap has--value">
+										<div class="input-wrap">
 											<div class="label-holder">
 												<label for="user-form-example__message-field">Сообщение<span class="form-mark">*</span></label>
 											</div>
-											<div class="input-holder success">
-												<textarea id="user-form-example__message-field" class="success"></textarea>
-												<span class="error-note">Поле обязательно для заполнения</span>
+											<div class="input-holder">
+												<textarea id="user-form-example__message-field"></textarea>
+												<span class="error-note">Поле обязательное для заполнения</span>
+												<span class="confirm-note">&nbsp;</span>
 											</div>
 										</div>
 										<div class="input-wrap">
@@ -909,7 +938,7 @@
 												<input class="upload-file" name="files[]" type="file" multiple="multiple" data-jfiler-limit="2">
 											</div>
 										</div>
-										<div class="input-wrap has--value">
+										<div class="input-wrap">
 											<div class="label-holder">
 												<label for="user-form-example__captcha-field">Защита от спама:<span class="form-mark">*</span></label>
 											</div>
@@ -918,6 +947,7 @@
 													<img src="img/captcha.jpg" alt="captcha" />
 													<input type="text" id="user-form-example__captcha-field">
 													<span class="error-note">Введите текст на картинке для защиты от спама</span>
+													<span class="confirm-note">&nbsp;</span>
 												</div>
 											</div>
 										</div>
@@ -933,6 +963,7 @@
 								</div>
 							</div>
 							<!--user form end-->
+							<div class="user-spacer">&nbsp;</div>
 							<!--columnize-->
 							<div class="layout-text">
 								<h3>
